// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App App component should match the snapshot 1`] = `
<div
  className="App"
>
  <header
    className="App--header"
  >
    <h1
      className="App--h1"
    >
      Mix It Up
    </h1>
    <Nav
      totalUserRecipes={0}
    />
  </header>
  <Switch>
    <Route
      component={[Function]}
      exact={true}
      path="/desserts"
    />
    <Route
      component={[Function]}
      exact={true}
      path="/my-recipes"
    />
    <Route
      path="/my-recipes/:id"
      render={[Function]}
    />
    <Route
      path="/desserts/:id"
      render={[Function]}
    />
    <Route
      component={[Function]}
      exact={true}
      path="/"
    />
    <Route
      component={[Function]}
    />
  </Switch>
  <div
    className="App--div-attribution"
  >
    <p>
      Recipe search powered by
      <a
        className="App--div-anchor"
      >
        <img
          alt="Yummly"
        />
      </a>
    </p>
  </div>
</div>
`;

exports[`App App component should match the snapshot when loading 1`] = `
<div
  className="App"
>
  <header
    className="App--header"
  >
    <h1
      className="App--h1"
    >
      Mix It Up
    </h1>
    <Nav
      totalUserRecipes={0}
    />
  </header>
  <Loading />
  <Switch>
    <Route
      component={[Function]}
      exact={true}
      path="/desserts"
    />
    <Route
      component={[Function]}
      exact={true}
      path="/my-recipes"
    />
    <Route
      path="/my-recipes/:id"
      render={[Function]}
    />
    <Route
      path="/desserts/:id"
      render={[Function]}
    />
    <Route
      component={[Function]}
      exact={true}
      path="/"
    />
    <Route
      component={[Function]}
    />
  </Switch>
  <div
    className="App--div-attribution"
  >
    <p>
      Recipe search powered by
      <a
        className="App--div-anchor"
      >
        <img
          alt="Yummly"
        />
      </a>
    </p>
  </div>
</div>
`;
